# Converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_application_ui.slint
.github/workflows/: cross-platform.yml
res/: app.rc
src/: main.cpp  run_hidden.vbs  window.cpp
ui/: my_application_ui.slint  popup_ui.slint
